@@ -2,6 +2,10 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  11 Dec 2014; Harold Naparst <harold@alum.mit.edu> pysqlcipher-2.6.3.1.ebuild,
+  metadata.xml:
+  put tags in lex order. Add python and proxy-maint herds.
+
   07 Dec 2014; Harold Naparst <harold@alum.mit.edu> pysqlcipher-2.6.3.1.ebuild:
   Add dependence on pysqlite
 
